@@ -1,3 +1,9 @@
+31May99=======================================================================
+1. Added checking for PC16,17,19 and 21 to make sure that they come in from
+the channels that they are supposed to.
+2. Pass the RCMDing node's priv level to the command (rather than the 
+connecting node's privilege level).
+3. Pass thru merge requests for other nodes.
 25May99=======================================================================
 1. try to make the lastin value correct even for local users
 2. got rid of the stupid bug that failed to print out the offline message
